--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         <h1 class="scramble">NAAVYA K</h1>
         <div class="Loading"></div>
       </div>
+      <div class="svgwaala">
+        <div id="dotted">
+          <img id="donut" src="/Images/donut.png" alt="" />
+          <img id="NAAVYA K-N" src="/Images/Group 1.svg" alt="" />
+          <img id="NAAVYA K-A" src="/Images/Group 1.svg" alt="" />
+          <img id="NAAVYA K-A2" src="/Images/O.svg" alt="" />
+          <img id="NAAVYA K-V" src="Images/Group 2.svg" alt="" />
+          <img id="NAAVYA K-Y" src="Images/Group 3.svg" alt="" />
+          <img id="NAAVYA K-A3" src="Images/I.svg" alt="" />
+        </div>
+        <div id="explore">
+          <h1 onclick="setTimeout( example, 1200)">Explore</h1>
+        </div>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
