--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day01</title>
+    <title>Hackathon Gravity Coding</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -17,12 +17,12 @@
       <div class="svgwaala">
         <div id="dotted">
           <img id="donut" src="/Images/donut.png" alt="" />
-          <img id="NAAVYA K-N" src="/Images/Group 1.svg" alt="" />
-          <img id="NAAVYA K-A" src="/Images/Group 1.svg" alt="" />
-          <img id="NAAVYA K-A2" src="/Images/O.svg" alt="" />
-          <img id="NAAVYA K-V" src="Images/Group 2.svg" alt="" />
-          <img id="NAAVYA K-Y" src="Images/Group 3.svg" alt="" />
-          <img id="NAAVYA K-A3" src="Images/I.svg" alt="" />
+          <img id="NAAVYAK-N" src="/Images/Group 1.svg" alt="" />
+          <img id="NAAVYAK-A" src="/Images/Group 1.svg" alt="" />
+          <img id="NAAVYAK-A2" src="/Images/O.svg" alt="" />
+          <img id="NAAVYAK-V" src="Images/Group 2.svg" alt="" />
+          <img id="NAAVYAK-Y" src="Images/Group 3.svg" alt="" />
+          <img id="NAAVYAK-A3" src="Images/I.svg" alt="" />
         </div>
         <div id="explore">
           <h1 onclick="setTimeout( example, 1200)">Explore</h1>
