--- a/again.html
+++ b/again.html
@@ -101,8 +101,8 @@
             </div>
           </div>
           <div class="main-txt-front">
-            <h1 class="enlarge"><span>NAAVYAK</h1>
-      
+            <h1 class="enlarge"><span>NAAVYAK</span></h1>
+          
           </div>
           <div class="front-page-img">
             <div id="line-effect-1" class="line-effect">
@@ -152,9 +152,6 @@
               <div class="line"></div>
             </div>
             <div id="line-effect-3" class="line-effect">
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
               <div class="line"></div>
               <div class="line"></div>
               <div class="line"></div>
@@ -301,6 +298,58 @@
         </div>
       </div>
     </div>
+    <div id="main2">
+      <div id="home">
+        <canvas></canvas>
+      </div>
+      <div class="txt-home modern">
+        <div class="h-container">
+          <h1 class="enlarge" id="h-one">DÉLICIOSA</h1>
+        </div>
+        <div class="h-container">
+          <h1 class="enlarge" id="h-two">FINE DINING</h1>
+        </div>
+        <div class="h-container">
+          <h1 class="enlarge" id="h-three">
+            Taste that makes you <br> go yummmmm. <br />Come for a drink, <br> stay for a meal. <br />
+            From our casa to yours. <br />
+            Feed your happy. <br />
+          </h1>
+        </div>
+      </div>
+      <!-- <div id="page1">
+        <div id="one">
+          <div class="timeline">
+            <div class="lft-timeline">
+              <h1 class="enlarge">
+                Healthy & <br />
+                <span>Modern</span>
+              </h1>
+              <div class="white-div">
+                <h4 class="enlarge">
+                  Bringing class to cuisine.
+                  Where every flavor tells a story. Your culinary adventure awaits.
+                  Life is dull without good food.
+                  Hundreds of flavors under one roof.
+                </h4>
+              </div>
+            </div>
+            <div class="rght-timeline">
+              <div id="back-div-img">
+                <div  id="rght-timeline-img" ></div>
+                <div class="menus-img"></div>
+                <div class="gallery-div">
+                  <div class="outline1"></div>
+                  <div class="outline2"></div>
+                  <h1 class="enlarge">Browse Cuisines</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script
